[gd_scene load_steps=10 format=3 uid="uid://dnsn26ckuh3wt"]

[ext_resource type="Script" path="res://scenes/battle.gd" id="1_dqy4l"]
[ext_resource type="Texture2D" uid="uid://cri8mehsrtg4a" path="res://assets/bg.png" id="2_qn6ts"]
[ext_resource type="Script" path="res://scripts/player.gd" id="3_85t67"]
[ext_resource type="Texture2D" uid="uid://dp58o4ov2wp2o" path="res://assets/Adventurer-1.5/Individual Sprites/adventurer-idle-00.png" id="3_k6u1m"]
[ext_resource type="Resource" uid="uid://dju8kdkgmvgi0" path="res://player_stats.tres" id="4_otm6i"]
[ext_resource type="Texture2D" uid="uid://ftrvn1o6aqqs" path="res://assets/FREE_Samurai 2D Pixel Art/Sprites/samurai.png" id="4_x3bxa"]
[ext_resource type="Script" path="res://scenes/Enemy.gd" id="6_i04or"]
[ext_resource type="Resource" uid="uid://cwwt75mclc8w3" path="res://enemy_stats.tres" id="7_5lduw"]
[ext_resource type="AudioStream" uid="uid://3h5iyskh0m7b" path="res://assets/PeriTune-2020_9-Battle_Tracks/1-BattleField.mp3" id="9_f0j54"]

[node name="Battle" type="Node2D" node_paths=PackedStringArray("command_box", "info_box")]
script = ExtResource("1_dqy4l")
command_box = NodePath("UI/CommandBox")
info_box = NodePath("UI/InfoBox")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(80, 45)
texture = ExtResource("2_qn6ts")
centered = false

[node name="Player" type="Node2D" parent="."]
position = Vector2(200, 200)
script = ExtResource("3_85t67")
stats = ExtResource("4_otm6i")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("3_k6u1m")
centered = false
metadata/_edit_lock_ = true

[node name="Enemy" type="Node2D" parent="."]
position = Vector2(400, 195)
script = ExtResource("6_i04or")
stats = ExtResource("7_5lduw")

[node name="Samurai" type="Sprite2D" parent="Enemy"]
texture = ExtResource("4_x3bxa")
centered = false
flip_h = true
metadata/_edit_lock_ = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
size_flags_vertical = 4

[node name="CommandBox" type="VBoxContainer" parent="UI"]
visible = false
layout_mode = 0
offset_left = 129.0
offset_top = 196.0
offset_right = 196.0
offset_bottom = 250.0

[node name="AttackButton" type="Button" parent="UI/CommandBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Attack"

[node name="SpecialButton" type="Button" parent="UI/CommandBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Special"

[node name="InfoBox" type="Label" parent="UI"]
layout_mode = 0
offset_left = 80.0
offset_top = 315.0
offset_right = 560.0
offset_bottom = 360.0
text = "Text goes here"

[node name="PlayerHP" type="Label" parent="UI"]
layout_mode = 0
offset_left = 208.0
offset_top = 168.0
offset_right = 248.0
offset_bottom = 191.0

[node name="EnemyHP" type="Label" parent="UI"]
layout_mode = 0
offset_left = 400.0
offset_top = 168.0
offset_right = 440.0
offset_bottom = 191.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_f0j54")

[connection signal="button_down" from="UI/CommandBox/AttackButton" to="." method="_on_button_button_down"]
[connection signal="button_down" from="UI/CommandBox/SpecialButton" to="." method="_on_special_button_button_down"]
